[package]
name = "neuronal"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"            # Linear algebra library with transformations and statically-sized or dynamically-sized matrices.
